chore: install @typescript-eslint/eslint-plugin

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "deploy": "wrangler publish"
   },
   "dependencies": {
+    "@typescript-eslint/eslint-plugin": "^6.9.0",
     "@typescript-eslint/parser": "^6.9.0"
   }
 }
