--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 	},
 	"dependencies": {
 		"@typescript-eslint/eslint-plugin": "^6.9.0",
-		"@typescript-eslint/parser": "^6.9.0"
+		"@typescript-eslint/parser": "^6.9.0",
+		"eslint-config-prettier": "^9.0.0"
 	}
 }
