--- a/.eslintrc
+++ b/.eslintrc
@@ -18,6 +18,7 @@
 	},
 	"rules": {
 		"no-unused-vars": "off",
-		"@typescript-eslint/no-unused-vars": ["warn"]
+		"@typescript-eslint/no-unused-vars": ["warn"],
+		"@typescript-eslint/no-explicit-any": ["warn"]
 	}
 }
